# auth

./: .dockerignore  .gitignore  .proxyrc.json  Cargo.toml  Cross.toml  Dockerfile  README.md  VERSION  babel.config.js  docker-compose.yml  lerna.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
server/: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  Vulpo.toml  docker-compose.yml  sqlx-data.json
server/migrations/: 00000000000000_initial_setup.up.sql  20201128210000_create_project.up.sql  20201128214822_create_users.up.sql  20201128215246_create_session.up.sql  20201128223759_create_passwordless.down.sql  20201128223759_create_passwordless.up.sql  20201203190902_create_keys.up.sql  20201217192635_password_reset.down.sql  20201217192635_password_reset.up.sql  20210124203105_create_passwords.down.sql  20210124203105_create_passwords.up.sql  20210125093928_create_settings.up.sql  20210212210113_create_template.up.sql  20210225201503_create_verify_email.up.sql  20210305204923_create_refresh_access_tokens.down.sql  20210918195903_create_email_change_request.down.sql  20210918195903_create_email_change_request.up.sql  20211002203303_create_api_keys.up.sql  20220502141736_create_oauth.down.sql
server/migrations/2020-11-28-210000_create_project/: down.sql  up.sql
server/migrations/2020-11-28-214822_create_users/: down.sql  up.sql
server/migrations/2020-11-28-215246_create_session/: down.sql  up.sql
server/migrations/2020-11-28-223759_create_passwordless/: down.sql  up.sql
server/migrations/2020-11-28-231732_create_admin/: down.sql  up.sql
server/migrations/2020-11-29-225246_create_token/: down.sql  up.sql
server/migrations/2020-12-03-190902_create_keys/: down.sql  up.sql
server/migrations/2020-12-17-192635_password_reset/: up.sql
server/migrations/2021-01-24-203105_create_passwords/: up.sql
server/migrations/2021-01-25-093928_create_settings/: down.sql  up.sql
server/migrations/2021-02-12-210113_create_template/: down.sql  up.sql
server/migrations/2021-02-25-201503_create_verify_email/: down.sql  up.sql
server/migrations/2021-03-05-204923_create_refresh_access_tokens/: up.sql
server/migrations/2021-03-05-204923_create_tokens/: down.sql  up.sql
server/migrations/2021-09-18-195903_create_email_change_request/: up.sql
server/migrations/2021-10-02-203303_create_api_keys/: down.sql  up.sql
server/migrations/2021-12-07-203105_create_passwords/: up.sql
server/migrations/2022-05-02-141736_create_oauth/: up.sql
server/sql/admin/: create.sql  create_project.sql  has_admin.sql  has_project.sql
server/sql/password/: get_reset_password_token.sql  insert_password_reset_token.sql
server/sql/passwordless/: confirm.sql  create.sql  delete_from_user.sql  get.sql  is_confirmed.sql
server/sql/project/: create.sql  domain.sql  get_flags.sql  list.sql  set_flags.sql  set_settings.sql
server/sql/project_keys/: create.sql  get_private_key.sql  get_public_key.sql
server/sql/session/: confirm.sql  create.sql  delete.sql  delete_all.sql  delete_by_user.sql  extend.sql  get.sql
server/sql/settings/: get_email.sql  insert_empty.sql  set_email.sql  template_email.sql
server/sql/template/: from_project.sql  set_template.sql
server/sql/token/: create.sql  expire.sql  get.sql  is_valid.sql  remove.sql  remove_all.sql  remove_user_id.sql
server/sql/user/: create.sql  disable.sql  enable.sql  get.sql  get_by_email.sql  get_by_id.sql  get_ids.sql  get_password.sql  list.sql  passwordless.sql  remove.sql  remove_by_token.sql  set_password.sql  sign_up.sql  total.sql
server/sql/verify_email/: get_token.sql  insert_token.sql  unverify.sql  verify.sql
server/src/: admin.rs  cache.rs  cli.rs  cors.rs  crypto.rs  db.rs  error.rs  file.rs  init.rs  lib.rs  mail.rs  main.rs  migration.rs  passwordless.rs  project.rs  schema.rs  server.rs  template.rs  user.rs
server/src/admin/: create.rs  create_project.rs  create_user.rs  has_admin.rs  mod.rs  project.rs
server/src/api_key/: data.rs  delete.rs  generate.rs  list.rs  mod.rs  verify.rs
server/src/config/: mod.rs  secrets.rs
server/src/data/: admin.rs  keys.rs  mod.rs  password_reset.rs  project.rs  session.rs  token.rs  user.rs  verify_email.rs
server/src/keys/: keys.rs  mod.rs  public_keys.rs
server/src/mail/: mailgun.rs  mod.rs
server/src/oauth/: google.rs  mod.rs
server/src/password/: mod.rs  reset.rs  signin.rs  signup.rs
server/template/: index.hbs
(+498 files in other folders)
