[package]
name = "auth_server"
version = "0.1.0"
authors = ["Michael Riezler <michael@riezler.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
include_dir = "0.6.0"
clap = "3.0.0-beta.2"
rand = "0.7.3"
bcrypt = "0.9.0"
handlebars = "3.5.1"
rustls = "0.19.0"
reqwest = { version = "0.10.9", features = ["json"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres"] }
jsonwebtoken = "7.2.0"
time = "0.2.23"
chrono = { version = "0.4.19", features = ["serde"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
openssl-sys = "0.9"
openssl = { version = "0.10" }
figment = { version = "0.9.4", features= ["env"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["postgres_pool", "uuid"]

[dependencies.postgres]
version = "0.18.1"
features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4"]