[package]
name = "vulpo_server"
version = "0.1.0"
authors = ["Michael Riezler <michael@riezler.co>"]
edition = "2018"
repository = "https://github.com/riezler-co/auth/"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
include_dir = "0.6"
clap = "3.0.0-beta.2"
rand = "0.8.4"
bcrypt = "0.10.0"
handlebars = "4.1"
reqwest = { version = "0.11", features = ["json"] }
diesel_migrations = "1.4"
diesel = { version = "1.4", features = ["postgres"] }
jsonwebtoken = "7.2"
chrono = { version = "0.4.19", features = ["serde"] }
openssl-sys = "0.9"
openssl = { version = "0.10" }
figment = { version = "0.10", features= ["env"] }
vulpo = "0.2.0"
log = { version = "0.4.14", features = ["serde"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json"
]

[dependencies.lettre]
git = "https://github.com/lettre/lettre"
version = "0.10.0-rc.3"
features = ["tokio1", "tokio1-rustls-tls", "tokio1-native-tls"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["uuid", "json"]
