[package]
name = "vulpo_server"
version = "0.1.0"
authors = ["Michael Riezler <michael@riezler.co>"]
edition = "2018"
repository = "https://github.com/riezler-co/auth/"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
include_dir = "0.7"
clap = "4.0.0-rc.2"
rand = "0.8.5"
bcrypt = "0.13.0"
handlebars = "4.3"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8.1"
chrono = { version = "0.4.19", features = ["serde"] }
figment = { version = "0.10", features= ["env"] }
vulpo = { path = "../packages/rust/sdk" }
vulpo_auth_types = { path = "../packages/rust/types" }
log = { version = "0.4.17", features = ["serde"] }
base64 = "0.13.0"
argon2 = "0.4"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
oauth2 = "4.2.0"
futures = "0.3"
thiserror = "1.0.31"
werkbank = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.17.3"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10"
url = "2.3.1"
lettre = { version = "0.10.1", features = ["tokio1", "tokio1-rustls-tls", "tokio1-native-tls"] }
ecdsa = "0.14"
p384 = "0.11"
pkcs8 = { version = "0.9", features = ["encryption", "pem"] }
rocket = { version = "0.5.0-rc.3", features = ["uuid", "json"] }
text_io = "0.1.12"
rpassword = "7.0.0"
spinners = "4.1.0"
base64-url = "1.4.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json",
	"offline",
	"migrate",
]
